@@ -329,5 +329,22 @@ namespace libtorrent
 			remove_oldest(l);
 	}
 
+	void file_pool::close_oldest()
+	{
+		mutex::scoped_lock l(m_mutex);
+
+		file_set::iterator i = std::min_element(m_files.begin(), m_files.end()
+			, boost::bind(&lru_file_entry::opened, boost::bind(&file_set::value_type::second, _1))
+				< boost::bind(&lru_file_entry::opened, boost::bind(&file_set::value_type::second, _2)));
+		if (i == m_files.end()) return;
+
+		file_handle file_ptr = i->second.file_ptr;
+		m_files.erase(i);
+
+		// closing a file may be long running operation (mac os x)
+		l.unlock();
+		file_ptr.reset();
+		l.lock();
+	}
 }
 
